# nano-serve

./: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
benchmark/: metrics.py  offline_bench.py  offline_metrics.py  offline_workloads.py  online_bench.py  plot_kv_quant_results.py  plot_offline_results.py  workloads.py
docs/: chunked_prefill_design.md  decode_first_analysis.md  enterprise_offline_report.md  kv_cache_quantization_plan.md  length_aware_batching.md  offline_data_parallel.md  prefix_aware_batching.md  tensor_parallel_design.md
nanovllm/distributed/: __init__.py  collectives.py  parallel_state.py  tensor_parallel_layers.py
nanovllm/kv_cache/: quantized_kv_cache.py
nanovllm/metrics/: metrics_collector.py
nanovllm/offline/: __init__.py  batch_planner.py  checkpoint.py  distributed_runner.py  prefix_planner.py  request_schema.py  result_merger.py  result_writer.py  shard_planner.py  token_estimator.py  tp_env_check.py  tp_generate.py  worker_entry.py
nanovllm/scheduler/: __init__.py  base.py  chunked_prefill.py  decode_first.py  fcfs.py  priority.py  slo_aware.py
nanovllm/serve/: api_server.py  async_engine.py  protocol.py  request_tracker.py  streaming.py
results/kv_quant/: q0_baseline.json
scripts/: check_tp_env.sh  run_enterprise_offline_experiments.sh  run_kv_quant_experiments.sh  run_offline_dp.sh  run_offline_tp_bench.sh  run_server.sh
