[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoserve"
version = "1.0.0"
authors = [{ name = "wqf666" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "SLO-Aware online LLM inference serving system, built on nano-vllm"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.4.0",
    "triton>=3.0.0",
    "transformers>=4.51.0",
    "flash-attn",
    "xxhash",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "sse-starlette>=1.6.0",
    "aiohttp>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/wqf666/nano-serve"
Repository = "https://github.com/wqf666/nano-serve"

[tool.setuptools.packages.find]
where = ["."]
include = ["nanovllm*", "benchmark*"]
